@@ -298,6 +298,7 @@ set g_flushItems 1
 set g_maxConnsPerIP 4
 set shoutcastPassword "none"
 set g_headshot 0
+set g_instagibDamage 400
 
 exec campaigncycle.cfg
 set com_watchdog 60
