@@ -557,6 +557,7 @@ vmCvar_t lua_allowedModules;
 vmCvar_t shoutcastPassword;
 vmCvar_t vote_allow_cointoss;
 vmCvar_t g_headshot;
+vmCvar_t g_instagibDamage;
 
 // flms
 vmCvar_t g_flushItems;
@@ -1121,7 +1122,8 @@ cvarTable_t		gameCvarTable[] = {
 	{ &lua_allowedModules, "lua_allowedModules", "", 0 },
 	{ &shoutcastPassword, "shoutcastPassword", "none", 0, 0, qfalse },
 	{ &vote_allow_cointoss, "vote_allow_cointoss", "1", 0, 0, qfalse, qfalse },
-	{ &g_headshot, "g_headshot", "0", 0, 0, qtrue },
+	{ &g_headshot, "g_headshot", "0", 0 },
+	{ &g_instagibDamage, "g_instagibDamage", "400", 0 },
 
 	//flms
 	{ &g_flushItems, "g_flushItems", "1", 0},
@@ -2289,15 +2291,7 @@ void G_UpdateCvars( void )
 				cv->modificationCount = cv->vmCvar->modificationCount;
 
 				if ( cv->trackChange && !(cv->cvarFlags & CVAR_LATCH) ) {
-					if( cv->vmCvar == &g_headshot ) {
-						// pheno: announce headshot mode changes
-						G_globalSound( "sound/misc/referee.wav" );
-						AP( va( "cp \"^dMode Change^7: Headshot mode: %s\" 1",
-							g_headshot.integer ? "^2On" : "^1Off" ) );
-					} else {
-						trap_SendServerCommand( -1, va("print \"Server:[lof] %s [lon]changed to[lof] %s\n\"", cv->cvarName, cv->vmCvar->string ) );
-					}
-
+					trap_SendServerCommand( -1, va("print \"Server:[lof] %s [lon]changed to[lof] %s\n\"", cv->cvarName, cv->vmCvar->string ) );
 					if(cv->vmCvar == &g_panzerwar) {
 						G_PanzerWar();
 					} else if(cv->vmCvar == &g_sniperwar) {
